force-app/main/default/objects/Population_Change__c/Population_Change__c.object-meta.xml
<CustomObject>
    <label>Population Change</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Population Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Population Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>