force-app/main/default/objects/Population_Change__c/fields/Animal_Species__c.field-meta.xml
<CustomField>
    <fullName>Animal_Species__c</fullName>
    <label>Animal Species</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog(s)</fullName>
            </value>
            <value>
                <fullName>Cat(s)</fullName>
            </value>
            <value>
                <fullName>Equine</fullName>
            </value>
            <value>
                <fullName>Chicken(s) (fighting inc. hens)</fullName>
            </value>
            <value>
                <fullName>Fowl (non-fighting)</fullName>
            </value>
            <value>
                <fullName>Rabbit(s)</fullName>
            </value>
            <value>
                <fullName>Exotic(s)</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Other(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>