force-app/main/default/objects/Population_Change__c/fields/Cost_of_Care_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Care_Disposition__c</fullName>
    <label>Cost of Care/Disposition</label>
    <referenceTo>Cost_of_Care_Disposition__c</referenceTo>
    <relationshipLabel>Population Changes</relationshipLabel>
    <relationshipName>Population_Change</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>