force-app/main/default/objects/Population_Change__c/fields/Mother_ID__c.field-meta.xml
<CustomField>
    <fullName>Mother_ID__c</fullName>
    <label>Mother ID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>