force-app/main/default/objects/Population_Change__c/fields/Population_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Population_Change_Date__c</fullName>
    <inlineHelpText>Please enter either the pre-judgment outcome date or the date of birth.</inlineHelpText>
    <label>Population Change Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>