force-app/main/default/objects/Population_Change__c/fields/Pre_Judgment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Pre_Judgment_Outcome__c</fullName>
    <label>Pre-Judgment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euthanized</fullName>
            </value>
            <value>
                <fullName>Died</fullName>
            </value>
            <value>
                <fullName>Returned to Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>