force-app/main/default/objects/Population_Change__c/recordTypes/Born_Post_Seizure.recordType-meta.xml
<RecordType>
    <fullName>Born_Post_Seizure</fullName>
    <active>true</active>
    <label>Born Post-Seizure</label>
</RecordType>