force-app/main/default/objects/Population_Change__c/recordTypes/Pre_Judgement_Outcome.recordType-meta.xml
<RecordType>
    <fullName>Pre_Judgement_Outcome</fullName>
    <active>true</active>
    <label>Pre-Judgement Outcome</label>
</RecordType>